# EM_SME_System

./: .gitignore  AI_ASSISTANT_SETUP.md  API_KEYS_GUIDE.md  README.md  docker-compose.yml  start_dev.sh  verify_deployment.py
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_schema.py  pyproject.toml  run_tests_manual.sh  seed_aging.py  seed_inventory.py  seed_invoices.py  seed_linked_invoices.py  test_login.py  verify_db_write.py
backend/alembic/: env.py
backend/alembic/versions/: 000000000001_initial_migration.py  2026_01_10_1942-a865f14e0c6a_add_missing_fields_to_tasks_and_finance.py  2026_01_10_2002-25332b719805_standardize_timestamps.py  2026_01_10_2007-3db05a2d8671_final_timestamp_sync.py  2026_01_10_2345-6606fc89469f_timezone_aware_datetimes.py  2026_01_11_1316-d6dda6cc309c_team_announcements.py  2026_01_12_2111-1a50d89cf3f6_add_events_and_categories.py  2026_01_12_2127-8f426302b3e6_add_announcement_tagging_fields.py  2026_01_14_2201-a74143ab0b8e_add_invitations_table.py  2026_02_21_2334-ea590b2ef3a5_accounting_extension.py
backend/app/: config.py  dependencies.py  main.py  worker.py
backend/app/api/v1/: accounting.py  aging.py  ai.py  analytics.py  announcements.py  (+17 more)
backend/app/core/: exceptions.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  accounting.py  event.py  financial.py  inventory.py  invitation.py  invoice.py  meeting.py  organization.py  system.py  task.py  user.py
backend/app/schemas/: common.py  event.py  financial.py  invitation.py  meeting.py  system.py  task.py  user.py
backend/app/services/: accounting_service.py  aging_service.py  analytics_service.py  audit_service.py  auth_service.py  coa_service.py  email_service.py  excel_parser.py  insights_service.py  inventory_service.py  invoice_service.py  meeting_service.py  payment_service.py  reminder_service.py  security_service.py  task_service.py
backend/app/tasks/: daily_notifications.py
backend/tests/: conftest.py  test_auth.py  test_finance.py  test_tasks.py
backend/tests/integration/: test_workflow.py
(+49 files in other folders)
