[tool.poetry]
name = "event-management-backend"
version = "0.1.0"
description = "Production-grade Event Management SaaS Backend"
authors = ["Your Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
redis = {extras = ["hiredis"], version = "^5.0.1"}
celery = {extras = ["redis"], version = "^5.3.4"}
pandas = "^2.1.4"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
# LangChain ecosystem - pinned for compatibility
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-google-genai = "^2.0.0"
langchain-qdrant = "^0.2.0"
langgraph = "^0.2.0"
qdrant-client = "^1.7.0"
openai = "^1.7.2"
scikit-learn = "^1.4.0"
statsmodels = "^0.14.1"
httpx = "^0.26.0"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
structlog = "^24.1.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.2"}
slowapi = "^0.1.9"
resend = "^2.0.0"
bcrypt = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
black = "^23.12.1"
ruff = "^0.1.11"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
